# cmake-gtest-gcov-project-template

./: CMakeLists.txt  README.md  lms_config.h  lms_config.h.in
cmake/: CodeCoverage.cmake
src/: CMakeLists.txt  main.cpp
src/lms/: CMakeLists.txt  book.cpp  book.h
test/: CMakeLists.txt
test/lms/: book_tests.cpp
